--- a/css/matcha-override.css
+++ b/css/matcha-override.css
@@ -6,6 +6,10 @@ img {
   border-radius: 0;
 }
 
+header {
+  margin: 0;
+}
+
 fieldset {
   margin-bottom: 0;
 }
